Fix wrap on start game button

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,7 @@ body {
 		padding: 15px 25px;
 		font-size: 30px;
 		font-weight: bold;
+		white-space: nowrap;
 		border-radius: 5px;
 		cursor: pointer;
 	}
